--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<div class="update-notification" *ngIf="appUpdater != undefined && appUpdater.updateAvailable">
-  <button (click)="updateSoftware()">Update Software</button>
+<div class="update-notification" [class.active]="notifActive" *ngIf="appUpdater != undefined && appUpdater.updateAvailable">
+  <div class="logo"></div>
+  <div class="message">
+    <p>A new update is available</p>
+    <span>It might be amazing</span>
+  </div>
+  <button (click)="updateSoftware()">Install now</button>
 </div>
+
 <home></home>
