--- a/src/assets/scss/common/_vars.scss
+++ b/src/assets/scss/common/_vars.scss
@@ -1,6 +1,8 @@
 $dark_blue: #131A38;
 $yellow: #FFD200;
-$blue: #0063FF;
-$green: #1CD65F;
+$blue: #0093E9;
+$green: #13B23F;
+$light_grey: #D8D8D8;
+$red: #ff6057;
 
 $dark: #181818;
