--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,94 +1,86 @@
 <header>
-	<div class="top">
-		<div class="logo" (click)="focusResult = false;">Hardware Club</div>
-		<div class="topSearch" *ngIf="focusResult">
-			<div class="searchbar">
-				<form (ngSubmit)="search(keywords, sort)" name="search">
-					<input type="text" name="search" [(ngModel)]="keywords" autofocus>
-					<!-- <input type="radio" name="sort" value="popularity" [(ngModel)]="sort"> Popularity
-					<input type="radio" name="sort" value="most_founded" [(ngModel)]="sort"> Most founded
-					<input type="radio" name="sort" value=" newest" [(ngModel)]="sort"> Newest
-					<input type="radio" name="sort" value="end_date" [(ngModel)]="sort"> End date -->
-					<input value="" type="submit">
-				</form>
-			</div>
-		</div>
-		<div class="categories">
-			<ul *ngIf="focusResult">
-				<li (click)="selectSort('popular')" [class.active]="sort === 'popular'">Popular</li>
-				<li (click)="selectSort('new')" [class.active]="sort === 'new'">Newest</li>
-				<li (click)="selectSort('most_founded')" [class.active]="sort === 'most_founded'">Most Founded</li>
-				<li (click)="selectSort('countdown')" [class.active]="sort === 'countdown'">End Date</li>
-			</ul>
-		</div>
-		<div class="profil"></div>
-		<div class="menu" (click)="menuOpen = !menuOpen"></div>
-	</div>
-	<div class="sources" [class.active]="menuOpen">
-		<ul>
-			<li>
-				<div class="icon kickstarter" [class.active]="kickstarterActive" (click)="kickstarterActive = !kickstarterActive;refreshResearch()"></div>
-				<p>Kickstarter</p>
-			</li>
-			<li>
-				<div class="icon indiegogo" [class.active]="indiegogoActive" (click)="indiegogoActive = !indiegogoActive;refreshResearch()"></div>
-				<p>Indiegogo</p>
-			</li>
-			<!-- <li>
-				<div class="icon hardwareclub"></div>
-				<p>Hardwareclub</p>
-			</li> -->
-		</ul>
+	<div class="logo"></div>
+	<div class="description">
+		Sonder is an internal application based on sourcing projects in websites such as Kickstarter or Indiegogo 
 	</div>
 </header>
-<section class="landing_search" [class.focus-result]="focusResult">
-	<div class="main_search">
-		<h1>Business Tool</h1>
-		<div class="searchbar">
-			<form (ngSubmit)="search(keywords, sort)" name="search">
-				<input type="text" name="search" [(ngModel)]="keywords" autofocus>
-				<!-- <input type="radio" name="sort" value="popularity" [(ngModel)]="sort"> Popularity
-				<input type="radio" name="sort" value="most_founded" [(ngModel)]="sort"> Most founded
-				<input type="radio" name="sort" value=" newest" [(ngModel)]="sort"> Newest
-				<input type="radio" name="sort" value="end_date" [(ngModel)]="sort"> End date -->
-				<input value="" type="submit">
-			</form>
-		</div>
+
+<section class="main_search">
+	<h1>What are you looking for ?</h1>
+	<div class="stripes">
+		<form (ngSubmit)="search(keywords, sort)" name="searchbar">
+			<input value="" type="submit">
+			<input type="text" name="search" [(ngModel)]="keywords" autofocus [disabled]="!hardwareclub.connected" placeholder="Try to search Hardware, Technologies or IoT">
+		</form>
 	</div>
-	<footer>
-		<div class="left"></div>
-		<div class="center"></div>
-		<div class="rigth"></div>
-	</footer>
 </section>
 
-<section class="results-page" [class.focus-result]="focusResult">
-	<div class="filters"></div>
-	<div class="results">
-		<ul class="cards">
-			<!--  (click)="selectProject(project)" -->
-			<li class="card" *ngFor="let project of allResults">
-				<span class="country">{{project.country}}</span>
-				<div class="header">
-					<div [className]="'image ' + project.origin" [style.backgroundImage]="'url(' + project.image + ')'"></div>
-					<div class="title" (click)="projectService.saveProject(project)">{{project.name}}</div>
+<footer>
+	<ul class="services">
+		<li class="icon kickstarter" [class.active]="kickstarter.connected" (click)="openLogin('kickstarter')"></li>
+		<li class="icon indiegogo" [class.active]="indiegogo.connected" (click)="openLogin('indiegogo')"></li>
+		<li class="icon hardwareclub" [class.active]="hardwareclub.connected" (click)="openLogin('hardwareclub')"></li>
+	</ul>
+	<p class="connected">{{services}} services connected</p>
+</footer>
+
+<section class="login" [class.open]="loginPage !== ''">
+	<div class="grey_zone" (click)="closePanel()"></div>
+	<section>
+		<button class="close" (click)="closePanel()"></button>
+		<div class="content">
+			<div class="logo">
+				<div class="icon" [ngClass]="loginPage"></div>
+			</div>
+			<h2>Sonder < • > {{loginPage}}</h2>
+			<p>In order to add {{loginPage}}'s source, we need to log in with your account. Please enter your {{loginPage}}'s login credentials and then click on Login. We won't access your personal information or post on your profile. </p>
+			<form (ngSubmit)="kickstarterLogin(kickstarter.email, kickstarter.password)" *ngIf="loginPage === 'kickstarter'">
+				<label for="email">email</label>
+				<input type="email" name="email" [(ngModel)]="kickstarter.email" placeholder="email">
+
+				<label for="password">password</label>
+				<input type="password" name="password" [(ngModel)]="kickstarter.password" placeholder="password">
+
+				<div class="remember">
+					<input [(ngModel)]="kickstarter.remember" type= "checkbox" name="kickstarter_remember">
 				</div>
-				<ul class="datas">
-					<li>
-						<span class="number">{{project.collected}}{{project.currencySymbol}}</span>
-						<span class="legend">({{project.currency}}) collected</span>
-					</li>
-					<li>
-						<span class="number">{{project.goal}}{{project.currencySymbol}}</span>
-						<span class="legend">goal</span>
-					</li>
-					<li>
-						<span class="number">{{project.backers}}</span>
-						<span class="legend">{{project.notes}}</span>
-						<!-- <span class="legend">Backers</span> -->
-					</li>
-				</ul>
-			</li>
-		</ul>
-	</div>
+				<p class="error">{{errorLogin}}</p>
+
+				<input [value]="'Login to ' + loginPage" type="submit" *ngIf="!loading">
+				<p class="wait" *ngIf="loading">please wait</p>
+			</form>
+
+			<form (ngSubmit)="indiegogoLogin(indiegogo.email, indiegogo.password)" *ngIf="loginPage === 'indiegogo'">
+				<label for="email">email</label>
+				<input type="email" name="email" [(ngModel)]="indiegogo.email" placeholder="email">
+
+				<label for="password">password</label>
+				<input type="password" name="password" [(ngModel)]="indiegogo.password" placeholder="password">
+
+				<div class="remember">
+					<input [(ngModel)]="indiegogo.remember" type= "checkbox" name="indiegogo_remember">
+				</div>
+				<p class="error">{{errorLogin}}</p>
+
+				<input [value]="'Login to ' + loginPage" type="submit" *ngIf="!loading">
+				<p class="wait" *ngIf="loading">please wait</p>
+			</form>
+
+			<form (ngSubmit)="hardwareclubLogin(hardwareclub.email, hardwareclub.password)" *ngIf="loginPage === 'hardwareclub'">
+				<label for="email">email</label>
+				<input type="email" name="email" [(ngModel)]="hardwareclub.email" placeholder="email">
+
+				<label for="password">password</label>
+				<input type="password" name="password" [(ngModel)]="hardwareclub.password" placeholder="password">
+
+				<div class="remember">
+					<input [(ngModel)]="hardwareclub.remember" type= "checkbox" name="hardwareclub_remember">
+				</div>
+				<p class="error">{{errorLogin}}</p>
+
+				<input [value]="'Login to ' + loginPage" type="submit" *ngIf="!loading">
+				<p class="wait" *ngIf="loading">please wait</p>
+			</form>
+		</div>
+	</section>
 </section>
