--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,6 +2,9 @@
 @import './common/vars';
 
 @import './partials/landing';
+@import './partials/search';
+@import './partials/navigation';
+@import './partials/vigilante';
 
 .update-notification {
 	position: absolute;
@@ -59,6 +62,28 @@
 @keyframes appearNotif {
     0% {right: -500px}
     100% {right: 80px}
+}
+
+.container {
+	transition: left 0.5s;
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
+	top: 0;
+	&.left {
+		left: -100vw;
+	}
+	&.right {
+		left: 100vw;
+	}
+	&.top {
+		top: -74px;
+	}
+	&.visible {
+		transition: left 0.5s;
+		left: 0 !important;
+		top: 0vw;
+	}
 }
 
 
