--- a/src/assets/scss/partials/_landing.scss
+++ b/src/assets/scss/partials/_landing.scss
@@ -1,245 +1,104 @@
-header {
-	margin: 46px 84px;
+.landing {
+	header {
+		margin: 46px 84px;
 
-	.logo {
-		display: block;
-		height: 42px;
-		width: 128px;
-		background: url('../../assets/images/signature.png');
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: cover;
-		float: left;
-	}
-	.description {
-		display: block;
-		width: 380px;
-		float:left;
-		float:right;
-		color: black;
-		opacity: 0.5;
-		font-size: 15;
-		font-family: 'MarkPro-Hairline';
-	}
-}
-
-section.main_search {
-	position: absolute;
-  display: block;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  width: 100vw;
-  min-width: 350px;
-	h1 {
-		text-align: center;
-		padding-bottom: 35px;
-		margin: 0;
-	}
-	.stripes {
-		background: url('../../assets/images/stripes.png');
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: cover;
-		height: 186px;
-		width: 100vw;
-		position: relative;
-		form {
-			width: 763px;
+		.logo {
 			display: block;
-			background: white;
-			position: absolute;
-		  display: block;
-		  top: 50%;
-		  left: 50%;
-		  transform: translateX(-50%) translateY(-50%);
-		  box-shadow: 0 2px 7px rgba(black, 0.1);
-		  padding: 20px 31px;
-			input[type="submit"] {
-				background: none;
-				border: none;
-				outline: none;
-				background: url('../../assets/images/icon_search_black.png');
-				height: 31px;
-				width: 31px;
-				background-position: center;
-				background-repeat: no-repeat;
-				background-size: 23px;
-				float: left;
-			}
-			input[type="text"] {
-				border: none;
-				outline: none;
-				padding: 0 18px;
-				font-size: 22px;
-				margin-left: 60px;
-				height: 31px;
-				width: calc(99% - 93px);
-				display: block;
-				border-left: 1px solid black;
-			}
-		}
-	}
-}
-
-.modules {
-	ul {
-		li {
-			//
-		}
-	}
-}
-
-footer {
-	position: absolute;
-	bottom: 0;
-	text-align: center;
-	width: 100vw;
-	ul.services {
-		padding: 0;
-		li.icon {
-			height: 49px;
-			width: 49px;
-			border-radius: 100px;
-			border: 3px solid white;
-			background-color: black;
-			position: relative;
+			height: 42px;
+			width: 128px;
+			background: url('../../assets/images/signature.png');
+			background-repeat: no-repeat;
 			background-position: center;
 			background-size: cover;
+			float: left;
+		}
+		.description {
+			display: block;
+			width: 380px;
+			float:left;
+			float:right;
+			color: black;
+			opacity: 0.5;
+			font-size: 15;
+			font-family: 'MarkPro';
+		}
+	}
+
+	section.main_search {
+		position: absolute;
+	  display: block;
+	  top: 50%;
+	  left: 50%;
+	  transform: translateX(-50%) translateY(-50%);
+	  width: 100vw;
+	  min-width: 350px;
+		h1 {
+			text-align: center;
+			padding-bottom: 35px;
+			margin: 0;
+		}
+		.stripes {
+			background: url('../../assets/images/stripes.png');
 			background-repeat: no-repeat;
-      display: inline-block;
-      margin: 13px;
-      cursor: pointer;
-      opacity: 0.5;
-      background-color:white;
-      &:hover {
-      	opacity: 0.8;
-      }
-			&:before {
-				content: '';
-				height: 59px;
-				width: 59px;
-				background-color: $light_grey;
-				border-radius: 100px;
+			background-position: center;
+			background-size: cover;
+			height: 186px;
+			width: 100vw;
+			position: relative;
+			form {
+				width: 763px;
+				display: block;
+				background: white;
 				position: absolute;
-				z-index: -1;
-				top: -5px;
-				left: -5px;
-				opacity: 0.5;
-				transition: background-color 0.3s;
-			}
-			// &:after {
-			// 	content: '';
-			// 	height: 49px;
-			// 	width: 49px;
-			// 	position: absolute;
-			// 	z-index: 1;
-			// 	border-radius: 100px;
-			// 	display: block;
-			// 	top: 0;
-			// }
-			&.kickstarter {
-				background-image: url('../../assets/images/kickstarter_logo.png');
-			}
-			&.indiegogo {
-				background-image: url('../../assets/images/indiegogo_logo.jpg');
-			}
-			&.hardwareclub {
-				background-image: url('../../assets/images/hardwareclub_logo.png');
-			}
-			&.active {
-				opacity: 1;
-				&:before {
-					background-color: green;
-					opacity: 1;
+			  display: block;
+			  top: 50%;
+			  left: 50%;
+			  transform: translateX(-50%) translateY(-50%);
+			  box-shadow: 0 2px 7px rgba(black, 0.1);
+			  padding: 20px 31px;
+				input[type="submit"] {
+					background: none;
+					border: none;
+					outline: none;
+					background: url('../../assets/images/icon_search_black.png');
+					height: 31px;
+					width: 31px;
+					background-position: center;
+					background-repeat: no-repeat;
+					background-size: 23px;
+					float: left;
+				}
+				input[type="text"] {
+					border: none;
+					outline: none;
+					padding: 0 18px;
+					font-size: 22px;
+					margin-left: 60px;
+					height: 31px;
+					width: calc(99% - 93px);
+					display: block;
+					border-left: 1px solid black;
 				}
 			}
 		}
 	}
-	.connected {
-		color: $green;
-	}
-}
 
-.login {
-	width: 100vw;
-	height: 100vh;
-	position: absolute;
-	top: 0;
-	overflow: hidden;
-	right: -100vw;
-	transition: right 0s;
-	transition-delay: 0.5s;
-	&.open {
-		right: 0;
-		transition-delay: 0s;
-		section {
-			right: 0;
-			transition: right 0.5s;
-		}
-		.grey_zone {
-			opacity: 0.52;
-			transition: opacity 0.5s;
+	.modules {
+		ul {
+			li {
+				//
+			}
 		}
 	}
-	.grey_zone {
-		width: 100vw;
-		background-color: black;
-		opacity: 0;
-		height: 100vh;
-		cursor: pointer;
-		transition: opacity 0.5s;
-	}
-	section {
-		width: calc(772px - 166px);
-		background: white;
-		height: calc(100vh - 92px);
+
+	footer {
 		position: absolute;
-		right: -772px;
-		top: 0;
-		padding: 46px 83px;
-		transition: right 0.5s;
-		.close {
-			float: right;
-			border: 2px;
-			opacity: 0.5;
-			cursor: pointer;
-			border-radius: 100px;
-			height: 24px;
-			width: 24px;
-			background-image: url('../../assets/images/icon_close.png');
-			background-size: 7px;
-			background-position: center;
-			background-repeat: no-repeat;
-			background-color: white;
-			outline: none;
-			position: relative;
-			border: 1px solid black;
-			transition: opacity 0.3s;
-			&:before {
-				content:"Close panel";
-				opacity: 0.5;
-				left: -114px;
-				top: 2px;
-				width: 100px;
-				display: block;
-				position: absolute;
-			}
-			&:active {
-				opacity: 0.3;
-			}
-		}
-		.content {
-			margin-top: 40px;
-			.logo {
-				border: 2px solid $blue;
-				border-radius: 100%;
-				margin: auto;
-				height: 55px;
-				width: 55px;
-				display: block;
-			}
-			.icon {
+		bottom: 0;
+		text-align: center;
+		width: 100vw;
+		ul.services {
+			padding: 0;
+			li.icon {
 				height: 49px;
 				width: 49px;
 				border-radius: 100px;
@@ -252,9 +111,34 @@ footer {
 	      display: inline-block;
 	      margin: 13px;
 	      cursor: pointer;
-	      opacity: 1;
+	      opacity: 0.5;
 	      background-color:white;
-	      margin: auto;
+	      &:hover {
+	      	opacity: 0.8;
+	      }
+				&:before {
+					content: '';
+					height: 59px;
+					width: 59px;
+					background-color: $light_grey;
+					border-radius: 100px;
+					position: absolute;
+					z-index: -1;
+					top: -5px;
+					left: -5px;
+					opacity: 0.5;
+					transition: background-color 0.3s;
+				}
+				// &:after {
+				// 	content: '';
+				// 	height: 49px;
+				// 	width: 49px;
+				// 	position: absolute;
+				// 	z-index: 1;
+				// 	border-radius: 100px;
+				// 	display: block;
+				// 	top: 0;
+				// }
 				&.kickstarter {
 					background-image: url('../../assets/images/kickstarter_logo.png');
 				}
@@ -264,77 +148,195 @@ footer {
 				&.hardwareclub {
 					background-image: url('../../assets/images/hardwareclub_logo.png');
 				}
-			}
-			h2 {
-				text-align: center;
-			}
-			p {
-				text-align: center;
-				width: 100%;
-				display: block;
-				font-size: 16px;
-				margin-bottom: 32px;
-			}
-			form {
-				label {
-					text-transform: uppercase;
-					font-size: 11px;
-					display: block;
-					margin-bottom: 11px;
-				}
-				input[type="email"], input[type="password"] {
-					display: block;
-					border: 1px solid $light_grey;
-					padding: 12px 22px 16px 22px;
-					border-radius: 3px;
-					width: calc(100% - 44px);
-					margin-bottom: 28px;
-					outline: none;
-					transition: border 0.3s;
-					&:focus {
-						border-color: $blue;
+				&.active {
+					opacity: 1;
+					&:before {
+						background-color: green;
+						opacity: 1;
 					}
 				}
-				.remember {
-					background: $light_grey;
-					border-radius: 1px;
-					padding: 11px 15px;
-					input[type="checkbox"]{
-						position: relative;
-						&:after {
-							content:"Remember me next time";
-							position: absolute;
-							left: 40px;
-							top: 0px;
-							font-size: 12px;
-							width: 200px;
-						}
-					}
+			}
+		}
+		.connected {
+			color: $green;
+		}
+	}
+
+	.login {
+		width: 100vw;
+		height: 100vh;
+		position: absolute;
+		top: 0;
+		overflow: hidden;
+		right: -100vw;
+		transition: right 0s;
+		transition-delay: 0.5s;
+		&.open {
+			right: 0;
+			transition-delay: 0s;
+			section {
+				right: 0;
+				transition: right 0.5s;
+			}
+			.grey_zone {
+				opacity: 0.52;
+				transition: opacity 0.5s;
+			}
+		}
+		.grey_zone {
+			width: 100vw;
+			background-color: black;
+			opacity: 0;
+			height: 100vh;
+			cursor: pointer;
+			transition: opacity 0.5s;
+		}
+		section {
+			width: calc(772px - 166px);
+			background: white;
+			height: calc(100vh - 92px);
+			position: absolute;
+			right: -772px;
+			top: 0;
+			padding: 46px 83px;
+			transition: right 0.5s;
+			.close {
+				float: right;
+				border: 2px;
+				opacity: 0.5;
+				cursor: pointer;
+				border-radius: 100px;
+				height: 24px;
+				width: 24px;
+				background-image: url('../../assets/images/icon_close.png');
+				background-size: 7px;
+				background-position: center;
+				background-repeat: no-repeat;
+				background-color: white;
+				outline: none;
+				position: relative;
+				border: 1px solid black;
+				transition: opacity 0.3s;
+				&:before {
+					content:"Close panel";
+					opacity: 0.5;
+					left: -114px;
+					top: 2px;
+					width: 100px;
+					display: block;
+					position: absolute;
 				}
-				input[type="submit"] {
-					background-color: $blue;
-					border-radius: 3px;
-					padding: 15px 0;
-					width: 265px;
+				&:active {
+					opacity: 0.3;
+				}
+			}
+			.content {
+				margin-top: 40px;
+				.logo {
+					border: 2px solid $blue;
+					border-radius: 100%;
 					margin: auto;
+					height: 55px;
+					width: 55px;
 					display: block;
-					color:white;
-					border: none;
-					outline: none;
-					margin-top: 40px;
-					&.load {
-						background: white;
-						&:after {
-							content:"please wait";
-							color: black;
-						}
+				}
+				.icon {
+					height: 49px;
+					width: 49px;
+					border-radius: 100px;
+					border: 3px solid white;
+					background-color: black;
+					position: relative;
+					background-position: center;
+					background-size: cover;
+					background-repeat: no-repeat;
+		      display: inline-block;
+		      margin: 13px;
+		      cursor: pointer;
+		      opacity: 1;
+		      background-color:white;
+		      margin: auto;
+					&.kickstarter {
+						background-image: url('../../assets/images/kickstarter_logo.png');
+					}
+					&.indiegogo {
+						background-image: url('../../assets/images/indiegogo_logo.jpg');
+					}
+					&.hardwareclub {
+						background-image: url('../../assets/images/hardwareclub_logo.png');
 					}
 				}
-				.error {
-					color: $red;
+				h2 {
+					text-align: center;
 				}
-				.wait {
-					margin-top: 60px;
+				p {
+					text-align: center;
+					width: 100%;
+					display: block;
+					font-size: 16px;
+					margin-bottom: 32px;
+				}
+				form {
+					label {
+						text-transform: uppercase;
+						font-size: 11px;
+						display: block;
+						margin-bottom: 11px;
+					}
+					input[type="email"], input[type="password"] {
+						display: block;
+						border: 1px solid $light_grey;
+						padding: 12px 22px 16px 22px;
+						border-radius: 3px;
+						width: calc(100% - 44px);
+						margin-bottom: 28px;
+						outline: none;
+						transition: border 0.3s;
+						&:focus {
+							border-color: $blue;
+						}
+					}
+					.remember {
+						background: $light_grey;
+						border-radius: 1px;
+						padding: 11px 15px;
+						input[type="checkbox"]{
+							position: relative;
+							&:after {
+								content:"Remember me next time";
+								position: absolute;
+								left: 40px;
+								top: 0px;
+								font-size: 12px;
+								width: 200px;
+							}
+						}
+					}
+					input[type="submit"] {
+						background-color: $blue;
+						border-radius: 3px;
+						padding: 15px 0;
+						width: 265px;
+						margin: auto;
+						display: block;
+						color:white;
+						border: none;
+						outline: none;
+						margin-top: 40px;
+						&.load {
+							background: white;
+							&:after {
+								content:"please wait";
+								color: black;
+							}
+						}
+					}
+					.error {
+						color: $red;
+					}
+					.wait {
+						margin-top: 60px;
+					}
 				}
 			}
 		}
